--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v2.1.5
         with:
-          go-version: 1.16.6
+          go-version: 1.17.8
       
       # Runs a single command using the runners shell
-      - name: Run the crawler
+      - name: Run the scraper
         run: go run main.go -config concerts-config.yml -store
         env:
           API_USER: ${{ secrets.API_USER }}
