hide field event-type for Volkshaus scraper

--- a/concerts-config.yml
+++ b/concerts-config.yml
@@ -1198,7 +1198,7 @@ scrapers:
         - name: "event-type"
           location:
             selector: ".event_type"
-          # hide: true
+          hide: true
         - name: "event-status"
           location:
             selector: ".event_links span.inbetweenSpace"
